--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.database=rollTheDice
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+#docker run -v ~/docker --name mongodb -p 27017:27017 mongo
